# mobile-robot-creathus-2023

./: .gitignore  README.md  runMultiPlot.sh  runRoscore.sh  runRqtTree.sh  runRviz.sh
cob_sick_s300/: CMakeLists.txt
ira_laser_tools/launch/: laserscan_multi_merger.launch
robot_description/: package.xml
robot_description/gazebo/: camera.gazebo
robot_description/launch/: camera.launch  display-imu.launch  display-robot.launch
robot_description/meshes/: camera.stl  caster_wheel_v2.stl  chassis_v3.stl  imu.stl  laser.stl  laser_v2.stl
robot_integrations/: CMakeLists.txt  package.xml
robot_integrations/src/: odom_imu2.cpp
robot_integrations/src/db_points/: points.json
robot_integrations/src/launch/: hardwares.launch  sick-and-imu.launch  sick-lasers.launch
robot_integrations/src/mpu6050_adafruit.ino/: mpu6050_adafruit.ino.ino
robot_integrations/src/scripts/: .DifferentialRobotController.py.swp  .points_manager.py.swp  DifferentialRobotController.py  EncoderSubscriber.py  LaserScanMerger.py  cmd_vel_to_rotation_wheel.py  complete_controller.py  complete_controller_2.py  comunicacao_plc.py  controller_cmd_vel_encoder.py  encoder.py  encoder_read_to_vector.py  encoder_to_encoder_odom.py  encoder_wheels_to_odom.py  go_to_goal.py  imu_odom_gpt.py  imu_script.py  imu_to_odom.py  odometria_jetson.py  points_manager.py  read_clp.py  read_encoder_state.py  read_front_laser.py  read_state_button_a.py  read_state_button_b.py  read_state_button_c.py  remap_laser.py  robot_controller_lib.py  zero_encoder.py
robot_navigation/: CMakeLists.txt  package.xml
(+79 files in other folders)
